--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -7,7 +7,7 @@
  	<link rel="stylesheet" href="{{STATIC_URL}}css/configuracion.css" type="text/css" media="all">
 	<link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css' />
 	<link rel="stylesheet" href="{{STATIC_URL}}css/font-awesome.min.css">
-
+  {% block title %} <title>Configuración - {{ request.user.username }}.</title> {% endblock %}
 	<!--[if IE 7]>
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome-ie7.min.css" rel="stylesheet" />
 	<![endif]-->
@@ -31,49 +31,16 @@
 
 
 {% block content %}
-
-  <div class="contenedor">
-  <hgroup>
-  <span>
-  	<h3 class="fontawesome-cog"><i class="fa fa-cog"></i> Configuracion</h3>
-  	<h6>Configure, edite o cambie cualquier cosa de su perfil.</h6>
-  </span>
-  </hgroup>
-  <br>
+<div class="col-lg-12 col-md-12 col-sm-12">
   <nav class="menu-config">
       <a class="perfil" onclick="window.location.href='/config/profile'"><i class="fa fa-user"></i><br>Perfil</a>
       <a class="Contraseña" onclick="window.location.href='/accounts/password/change/'"><i class="fa fa-lock"></i><br>Contraseña</a>
   </nav>
-      <div class="col-lg-12 col-sm-9">
-        <div class="col-lg-7 col-md-9 col-sm-8">
-          <div id="contra">
-            <li>
-              <form id="levi">
-              	{% block cf-title %}{% endblock %}
-              </form>
-            </li>
-            {% block cf-form %}{% endblock %}
-            </div>
-        </div>
-      </div>
+  <div class="col-lg-7 col-md-7 col-sm-7 wrapper-p">
+    <div class="col-lg-12 col-md-12 col-sm-12 wrapper-title">
+      {% block cf-title %}{% endblock %}
+      {% block cf-form %}{% endblock %}
     </div>
-		<!-- Permite mostrar el form para enviar mensajes -->
-  {% if user.is_authenticated %}
-  <div id="page-wrapper" style="display:none;">
-    <h1> </h1>
-    <div id="status">to {{ user_profile.username }}</div>
-    <form id="message-form2" action="" method="post">{% csrf_token %}
-      {{publicationForm.as_p}}
-      <input type="text" name="userprofileid" value="{{ user_profile.pk }}" hidden>
-      <input type="text" name="emitterid" value="{{ user.pk }}" hidden>
-      <button type="submit" id="sendformpubli"><i class="fa fa-paper-plane"> </i> Enviar</button>
-      <!--  <input type="submit" id="sendformpubli" value="Submit Feedback" /> -->
-      <button type="button" id="close"><i class="fa fa-remove"> </i> Cerrar</button>
-      <button class="fontawesome-bullhorn"><i class="fa fa-bullhorn"> </i></button>
-      <button class="fontawesome-camera"><i class="fa fa-camera"> </i></button>
-      <button class="fontawesome-map-marker"><i class="fa fa-map-marker"> </i></button>
-    </form>
   </div>
-{% endif %}
-
+</div>
 {% endblock%}
