--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -6,7 +6,6 @@
     <meta name="keywords" content="Mi perfil, Mensajes, Amigos, Seguidores, Comentarios">
     <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-
     <link rel="stylesheet" href="{{STATIC_URL}}css/miperfil.css"/>
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/buscar.css" />
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/jquery.gritter.css" />
@@ -50,5 +49,24 @@
     <!-- Contenido de cada pagina por separado -->
     {% endblock %}
     <!-- bloque de js para cada pagina -->
+
+    <!-- Form para nuevo mensaje -->
+  {% if user.is_authenticated %}
+  <div id="page-wrapper" style="display:none;">
+      <h1> </h1>
+    <div id="status"><i class="fa fa-paper-plane"> </i> Mensaje para {{ user_profile.username }}</div>
+    <form id="message-form2" action="" method="post">{% csrf_token %}
+    {{publicationForm.as_p}}
+      <input type="text" name="userprofileid" value="{{ user_profile.pk }}" hidden>
+      <input type="text" name="emitterid" value="{{ user.pk }}" hidden>
+        <button type="button" id="close"><i class="fa fa-remove"> </i> Cerrar</button>
+        <button type="submit" id="sendformpubli"><i class="fa fa-paper-plane"> </i> Enviar</button>
+        <!--  <input type="submit" id="sendformpubli" value="Submit Feedback" /> -->
+        <button class="fontawesome-bullhorn"><i class="fa fa-bullhorn"> </i></button>
+        <button class="fontawesome-camera"><i class="fa fa-camera"> </i></button>
+        <button class="fontawesome-map-marker"><i class="fa fa-map-marker"> </i></button>
+    </form>
+  </div>
+{% endif %}
   </body>
 </html>
