--- a/skyfolk/templates/account/cf-changepass.html
+++ b/skyfolk/templates/account/cf-changepass.html
@@ -1,13 +1,14 @@
 {% extends "account/base_cf.html" %}
 
-
 {% block additional_files %}
 
 {% endblock%}
 
 {% block cf-title %}
+<hgroup>
 	<h4 class="cn"> Contraseña </h4>
 	<h6 class="ch"> Cambia tu contraseña o recupera tu contraseña actual.</h6>
+</hgroup>
 {% endblock %}
 
 
