--- a/skyfolk/templates/account/login.html
+++ b/skyfolk/templates/account/login.html
@@ -39,7 +39,7 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 -->
 {% endif %}
-<div id="login" class="row grey darken-2 z-depth-2">
+<div id="login" class="row white z-depth-2">
 	<h5>Iniciar sesion</h5>
 	<form class="login form-3" method="POST" action="{% url 'account_login' %}">
 		<div class="form-group">
@@ -49,7 +49,7 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
 	  <input class="form-control" type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
 
 	  {% endif %}
-      
+
 	  </div>
 	  <button id="iniciar_sesion" class="waves-effect waves-light btn" type="submit">{% trans "Sign In" %}</button>
 	  <a id="registrar" type="button" class="waves-effect waves-light btn" onclick="javascript:location.href='{{ signup_url }}'">{% trans "Sign Up" %}</a>
