--- a/skyfolk/static/css/configuracion.css
+++ b/skyfolk/static/css/configuracion.css
@@ -2,8 +2,8 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
 
 body {
-    font-size: 11.5px !important;
-    font-family: 'Open Sans', sans-serif !important;
+  font-size: 11.5px !important;
+  font-family: 'Open Sans', sans-serif !important;
 }
 
 hgroup {
@@ -12,29 +12,25 @@ hgroup {
   border-bottom: 1px solid #66757F;
   padding: 10px 0px;
 }
-
 span {
   position: relative;
   top: 40px;
   left: 0px;
 }
-
 h4 {
   display: block;
   color: #66757F;
   font-weight: 100;
   font-size: 22px !important;
 }
-
 h6 {
   display: inline-block;
   margin-top: 7px;
   margin-left: 15px !important;
-  color:  #66757F;
+  color: #66757F;
   font-weight: 100;
   font-size: 15px !important;
 }
-
 .wrapper-p {
   margin-top: 5% !important;
   margin-left: 7% !important;
@@ -42,7 +38,9 @@ h6 {
   padding: 10px;
   border-radius: 8px;
 }
+
 /* Menu horizontal */
+
 .menu-config {
   position: relative;
   display: block;
@@ -70,7 +68,6 @@ h6 {
   color: #1e88e5;
   border-right: 10px solid #eee;
 }
-
 .wr {
   position: relative;
   margin: auto;
@@ -78,26 +75,23 @@ h6 {
   height: 300px;
   left: 27%;
 }
-
 #recent, #new, #new2 {
   display: list-item;
 }
-
 #form-changepass {
   position: relative;
   left: 70px;
 }
 .img-profile {
-    width: 120px;
-    height: 120px;
-    box-shadow: 0px 1px 5px #1976D2;
-    cursor: pointer;
-    display: block;
-    position: relative;
-    margin: auto;
-    top: 80px;
+  width: 120px;
+  height: 120px;
+  box-shadow: 0px 1px 5px #1976D2;
+  cursor: pointer;
+  display: block;
+  position: relative;
+  margin: auto;
+  top: 80px;
 }
-
 .actual {
   padding: 10px 5px;
   border: none;
@@ -106,23 +100,19 @@ h6 {
   outline: none;
 }
 .actual:focus {
-	 border-bottom: solid 2px #1E88E5;
+  border-bottom: solid 2px #1E88E5;
 }
 .nameConfig {
   position: relative;
 }
-.nameConfig .errorlist, .lastConfig .errorlist {
-
-}
+.nameConfig .errorlist, .lastConfig .errorlist {}
 .lastConfig {
   position: relative;
 }
-
 .nameConfig p, .lastConfig p {
   position: relative;
 }
 #float {
-
   font-size: 15px;
   font-family: 'Open Sans', sans-serif;
   margin: -30px;
@@ -130,31 +120,31 @@ h6 {
   background: #FFFFFF;
   border: 50px solid #FFF;
   border-radius: 8px 8px 8px 8px;
-  box-shadow: rgb(196,196,196) 5px 5px;
+  box-shadow: rgb(196, 196, 196) 5px 5px;
 }
 input[type="password"] {
   position: relative;
   display: list-item;
-  border: 1px solid rgb(196,196,196);
+  border: 1px solid rgb(196, 196, 196);
   width: 120px;
   height: 30px;
   padding: 10px 5px;
   left: 220px;
 }
 label[for="id_oldpassword"] {
-  color: #212121 ;
+  color: #212121;
   font-weight: 100;
   position: relative;
   top: 25px;
 }
 label[for="id_password1"] {
-  color: #212121 ;
+  color: #212121;
   font-weight: 100;
   position: relative;
   top: 25px;
 }
 label[for="id_password2"] {
-  color: #212121 ;
+  color: #212121;
   font-weight: 100;
   position: relative;
   top: 25px;
@@ -173,16 +163,15 @@ label[for="id_password2"] {
   width: 50%;
   border-radius: 7px;
   -webkit-box-shadow: 2px 2px 7px 0px #efefef;
-  -moz-box-shadow:    2px 2px 7px 0px #efefef;
-  box-shadow:         2px 2px 7px 0px #efefef;
+  -moz-box-shadow: 2px 2px 7px 0px #efefef;
+  box-shadow: 2px 2px 7px 0px #efefef;
   border: 1px solid #e0e0e0;
 }
-
 #contra li {
-      list-style-type: none;
-      position: relative;
-      display: list-item;
-      margin-top: 30px;
+  list-style-type: none;
+  position: relative;
+  display: list-item;
+  margin-top: 30px;
 }
 #contra-2 {
   margin-top: 10px;
@@ -192,6 +181,7 @@ label[for="id_password2"] {
 #form-changepass {
   height: 100%;
 }
+
 /* Boton salvar cambios */
 
 button[type="submit"] {
@@ -220,11 +210,9 @@ button[type="submit"] {
   top: 0px;
   margin-top: 20px;
 }
-
 label[for="id_image"] {
   color: #212121;
   font-weight: 100;
-
 }
 #id_backImage {
   display: list-item;
@@ -236,15 +224,13 @@ label[for="id_backImage"] {
   color: #212121;
   font-weight: 100;
   margin-right: 10px;
-
 }
-
 #id_status {
   width: 200px;
   position: relative;
   margin: auto;
   padding: 5px 7px;
-  color: rgba(44,44,44,0.854);
+  color: rgba(44, 44, 44, 0.854);
   border: 1px solid #ececec;
   border-radius: 2px;
   transition: all .3s linear;
@@ -262,7 +248,7 @@ label[for="id_status"] {
   position: relative;
 }
 #id_hiddenMenu {
-	opacity: 1;
+  opacity: 1;
 }
 label[for="id_hiddenMenu"] {
   top: 0px;
@@ -274,7 +260,6 @@ hgroup {
   position: relative;
   margin-bottom: 30px;
   margin-top: 0px;
-
 }
 .cn {
   font-size: 20px;
@@ -283,7 +268,6 @@ hgroup {
   font-family: 'Open Sans', sans-serif;
   margin-left: 17px;
   margin-top: -14px;
-
 }
 .ch {
   font-size: 12px;
