+ Version V1 + Cambiando style para div flotante mensajes

--- a/skyfolk/static/css/configuracion.css
+++ b/skyfolk/static/css/configuracion.css
@@ -101,6 +101,7 @@ h6 {
   transition: border 0.3s;
   outline: none;
   width: 100%;
+  background-color: transparent;
 }
 .actual:focus {
   border-bottom: solid 2px #1E88E5;
