--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -53,14 +53,17 @@
     <!-- Form para nuevo mensaje -->
   {% if user.is_authenticated %}
   <div id="page-wrapper" style="display:none;">
-      <h1> </h1>
-    <div id="status"><i class="fa fa-paper-plane"> </i> Mensaje para {{ user_profile.username }}</div>
+    <div id="status">
+    <i class="fa fa-paper-plane"> </i> 
+    <h4>Publicar comentario</h4>
+    <h6>Publica un comentario para que el mundo lo vea.</h6>
+    </div>
     <form id="message-form2" action="" method="post">{% csrf_token %}
     {{publicationForm.as_p}}
       <input type="text" name="userprofileid" value="{{ user_profile.pk }}" hidden>
       <input type="text" name="emitterid" value="{{ user.pk }}" hidden>
-        <button type="button" id="close"><i class="fa fa-remove"> </i> Cerrar</button>
         <button type="submit" id="sendformpubli"><i class="fa fa-paper-plane"> </i> Enviar</button>
+        <button type="button" id="close"><i class="fa fa-remove"> </i> Cerrar</button>
         <!--  <input type="submit" id="sendformpubli" value="Submit Feedback" /> -->
         <button class="fontawesome-bullhorn"><i class="fa fa-bullhorn"> </i></button>
         <button class="fontawesome-camera"><i class="fa fa-camera"> </i></button>
