--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -25,7 +25,7 @@
   -webkit-transition: all .3s ease-in;
   -moz-transition: all .3s ease-in;
   border-radius: 7px;
-  background-image: url('https://cdn3.iconfinder.com/data/icons/eightyshades/512/11_Search-128.png');
+  background-image: url('/static/img/search-icon.png');
   background-repeat: no-repeat;
   background-position: 95%;
   background-size: 13px;
@@ -157,6 +157,7 @@
   top: 40px;
   margin-right: 200px;
   font-family: 'Open Sans', sans-serif;
+  font-weight: 100;
   height: 540px;
   border-bottom-right-radius: 10px;
   color: #ccc;
@@ -189,12 +190,13 @@
   -moz-transition: all .3s ease-in;
 }
 #toggle li {
-  font-size: 17px;
+  font-size: 16.5px;
   margin-top: 10px;
-  margin-left: 10px;
+  margin-left: 17px;
   list-style-type: none;
   padding: 10px 10px;
   color: rgba(44,44,44,0.854);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
   -webkit-transition: all .3s ease-in;
   -moz-transition: all .3s ease-in;
   transition: all .3s ease-in;
@@ -457,11 +459,11 @@
         -webkit-transition: all .3s linear;
         -moz-transition: all .3s linear;
         transition: all .3s linear;
-        background: #eeeeee url('https://cdn3.iconfinder.com/data/icons/eightyshades/512/11_Search-128.png') no-repeat 95%;
+        background: #eeeeee url("/static/img/search-icon.png") no-repeat 95%;
         background-size: 13px;
     }
     .search-in-tab:focus {
-        background: #fefefe url('https://cdn3.iconfinder.com/data/icons/eightyshades/512/11_Search-128.png') no-repeat 1%;
+        background: #fefefe url('/static/img/search-icon.png') no-repeat 1%;
         background-size: 13px;
     }
 @media only screen and (min-width: 640px) and (max-width: 1080px) {
