--- a/skyfolk/static/css/columnas.css
+++ b/skyfolk/static/css/columnas.css
@@ -1,6 +1,10 @@
-@import url(http://weloveiconfonts.com/api/?family=entypo);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400);
-@import url(http://fonts.googleapis.com/css?family=Lato);
+@font-face {
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    src: local('Open Sans'), local('Open Sans'), url({{STATIC_URL}}font/Open-Sans/OpenSans-Light.ttf) format('truetype');
+}
+
 [class*="entypo-"]:before {
   font-family: 'entypo', sans-serif;
 }
