--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1,7 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
-
-
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -457,7 +453,7 @@ body > .container {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   margin-bottom: 1em; }
 
-/* Ventana para las opciones de cada pin */ 
+/* Ventana para las opciones de cada pin */
 
 * .ventana-pin {
   width: 100%;
@@ -471,7 +467,7 @@ body > .container {
   font-size: 17px;
   margin-right: 14px;
 }
-  
+
  /* Color para el body + html al hacer click en configuracion de perfil */
 .body-inConf {
   background-color: #e6e6e6;
@@ -1735,14 +1731,6 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   width: 100%;
 }
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
-@import url(http://weloveiconfonts.com/api/?family=fontawesome);
-
-/* fontawesome */
-[class*="fontawesome-"]:before {
-  font-family: 'FontAwesome', sans-serif;
-}
-
 /** Mensaje flotante */
 *, *:before, *:after {
   -moz-box-sizing: border-box;
@@ -1759,7 +1747,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   border-top: 5px solid rgba(44,44,44,0.777);
   box-shadow: 0 2px 10px rgba(0,0,0,0.8);
   border-radius: 7px;
-  cursor: move;
+  cursor: default;
   font-family: 'Open Sans', sans-serif;
 
   /*CENTRADO*/
