--- a/skyfolk/templates/account/signup.html
+++ b/skyfolk/templates/account/signup.html
@@ -26,8 +26,8 @@
 	  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
 	  {% endif %}
 	  </div>
-	  <button id="sign_in_register" class="waves-effect waves-light btn" type="submit">{% trans "Sign In" %}</button>
-	  <button id="sign_up_register" type="button" class="waves-effect waves-light btn" onclick="javascript:location.href='{{ signup_url }}'"><!--{% trans "Sign Up" %}-->Limpiar</button>
+	  <button id="sign_in_register" class="waves-effect waves-light btn blue lighten-2" type="submit">{% trans "Sign In" %}</button>
+	  <button id="sign_up_register" type="button" class="waves-effect waves-light btn blue lighten-2" onclick="javascript:location.href='{{ signup_url }}'"><!--{% trans "Sign Up" %}-->Limpiar</button>
 	</form>
 </div>
 
