--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1132,7 +1132,6 @@ a {
 
 }
 #tab-comentarios{
-
   overflow: auto;
   height:100%;
 
@@ -1740,11 +1739,11 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 
 #page-wrapper {
-  width: 50%;
-  background: #FFF;
+  width: 55%;
+  background: #fafafa;
   padding: 1em;
   margin: 1em auto;
-  border-top: 5px solid rgba(44,44,44,0.777);
+  border-top: 4px solid rgba(44,44,44,0.777);
   box-shadow: 0 2px 10px rgba(0,0,0,0.8);
   border-radius: 7px;
   cursor: default;
@@ -1877,13 +1876,11 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 #tab-timeline {
   height:100%;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow: auto;
 }
 
 .fontawesome-bullhorn {
-    background: #f5f5f5;
-    border-bottom: 1px solid #7CE1FF;
+    background: transparent;
     display: inline-block;
     border-radius: 3px;
     border: none;
@@ -1893,15 +1890,15 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     color: #1e88e5;
     top: 10px;
     margin: 0 0.25rem;
+    cursor: pointer;
     text-align: center;
 }
 .fontawesome-bullhorn:hover {
-  background-color: white;
+  box-shadow: 0 1px 5px #1976d2;
 
 }
-.fontawesome-camera {
-    background: #f5f5f5;
-    border-bottom: 1px solid #7CE1FF;
+.fontawesome-file {
+    background: transparent;
     display: inline-block;
     border-radius: 3px;
     border: none;
@@ -1910,20 +1907,21 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     float: left;
     color: #1e88e5;
     top: 10px;
+    cursor: pointer;
     margin: 0 0.25rem;
     text-align: center;
 
 }
-.fontawesome-camera:hover {
-  background-color: white;
+.fontawesome-file:hover {
+   box-shadow: 0 1px 5px #1976d2;
 }
 .fontawesome-map-marker {
-    background: #f5f5f5;
-    border-bottom: 1px solid #7CE1FF;
+    background: transparent;
     display: inline-block;
     border-radius: 3px;
     border: none;
     font-size: 1.1rem;
+    cursor: pointer;
     padding: 1rem 1em;
     float: left;
     color: #1e88e5;
@@ -1931,80 +1929,15 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     margin: 0 0.25rem;
     text-align: center;
 
-
 }
-.fontawesome-map-maker {
-  background-color: white;
+.fontawesome-map-marker:hover {
+    box-shadow: 0 1px 5px #1976d2;
 }
 .fontawesome-eye-open, .fontawesome-star-half, .fontawesome-globe, .fontawesome-heart-empty, .fontawesome-star-empty  {
   font-size: 20px;
   color:white;}
 
    /* INFORMACION DEL USUARIO */
-
-
-
-  /* NOTIFICACION ME GUSTA */
-  #notifi div.love {
-  position: absolute;
-  top: 20%;
-  min-width: 400px;
-  max-width: 420px;
-  min-height: 120px;
-  max-height: 127px;
-  background-color: tomato;
-  font-family: 'Open Sans', sans-serif;
-  border-radius: 7px;
-  display: block;
-}
-#notifi div.love h4 {
-  position: relative;
-  margin: 10px;
-  text-align: center;
-  color: grey;
-}
-#notifi div.love a {
-  color: white;
-  text-decoration: none;
-  font-style: normal;
-  transition: all .3s ease-in-out;
-}
-#notifi div.love a:hover {
-  color: grey;
-}
-#notifi div.love span {
-  text-align: center;
-}
-#notifi div.love p {
-  font-size: 15px;
-  position: relative;
-  color: white;
-  float: right;
-  height: auto;
-  margin: auto;
-  margin-top: 20px;
-  padding: 0px 10px;
-  display: inline-block;
-}
-#notifi div.love i {
-  text-decoration: none;
-  font-style: normal;
-  position: relative;
-  left:7%;
-  font-size: 40px;
-  padding: 10px 10px;
-  margin: auto;
-  display: inline-block;
-  color: white;
-  transition: all .2s ease-in-out;
-}
-#notifi div.love a.fontawesome-remove {
-  position: absolute;
-  margin: auto;
-  left: 95%;
-  top: 2%;
-  cursor: pointer;
-}
 
 #friend_request_progress {
     /*
