--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -12,7 +12,7 @@
             <li onclick="location.href='/messages/inbox/'"><i class="fa fa-inbox fa-lg"></i> Mensajes privados </li>
             <li onclick="location.href='{% url 'account_logout' %}'"><i class="fa fa-sign-out"></i> Salir</li>
             <li class="shortcut-keyboard"><i class="fa fa-keyboard-o"></i> Atajos</li>
-            <li onclick="location.href='/about/home'">Ayuda</li>
+            <li onclick="location.href='/about/home'"><i class="fa fa-info-circle"></i> Ayuda</li>
           </ul>
         </div>
       </li>
@@ -23,7 +23,7 @@
         </form>
         <!-- Logotipo que re-direcciona a la pagina principal -->
         <li>
-          <div class="logotipo_skyfolk" style="background-image: url('{{STATIC_URL}}img/logo.png');" onclick="location.href='/'"></div>
+          <div class="logotipo_skyfolk" onclick="location.href='/'"> <i>S</i>kyfolk</div>
         </li>
         <li class="fa fa-comment fa-lg"> </li>
         <li class="fa fa-bell fa-lg"><em onclick="contador()">{{n_likes}}</em></li>
