--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -65,9 +65,9 @@
         <button type="submit" id="sendformpubli"><i class="fa fa-paper-plane"> </i> Enviar</button>
         <button type="button" id="close"><i class="fa fa-remove"> </i> Cerrar</button>
         <!--  <input type="submit" id="sendformpubli" value="Submit Feedback" /> -->
-        <button class="fontawesome-bullhorn"><i class="fa fa-bullhorn"> </i></button>
-        <button class="fontawesome-camera"><i class="fa fa-camera"> </i></button>
-        <button class="fontawesome-map-marker"><i class="fa fa-map-marker"> </i></button>
+        <button class="fontawesome-bullhorn"><i class="fa fa-bullhorn"> </i> Difundir mensaje</button>
+        <button class="fontawesome-file"><i class="fa fa-paperclip"> </i> Añadir archivo</button>
+        <button class="fontawesome-map-marker"><i class="fa fa-map-marker"> </i> Añadir localización</button>
     </form>
   </div>
 {% endif %}
