--- a/skyfolk/templates/account/login.html
+++ b/skyfolk/templates/account/login.html
@@ -51,8 +51,8 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
 	  {% endif %}
 
 	  </div>
-	  <button id="iniciar_sesion" class="waves-effect waves-light btn" type="submit">{% trans "Sign In" %}</button>
-	  <a id="registrar" type="button" class="waves-effect waves-light btn" onclick="javascript:location.href='{{ signup_url }}'">{% trans "Sign Up" %}</a>
+	  <button id="iniciar_sesion" class="waves-effect waves-light btn blue lighten-2" type="submit">{% trans "Sign In" %}</button>
+	  <a id="registrar" type="button" class="waves-effect waves-light btn blue lighten-2" onclick="javascript:location.href='{{ signup_url }}'">{% trans "Sign Up" %}</a>
     <div class="forgot_pswd">
     <a class="button secondaryAction" id="losepwd" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
     </div>
