--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -646,9 +646,9 @@
       </div>
 
 
-      <div class="col-lg-12 col-sm-12 col-md-12">
+    <!-- <div class="col-lg-12 col-sm-12 col-md-12"> -->
         <!-- <div class="weather card"> -->
-      <div class="widget-right-down">
+     <!-- <div class="widget-right-down">
           <div class="current">
               <div class="col-sm-12 col-md-12 col-lg-12">
               <div class="follower-card">
@@ -684,7 +684,7 @@
               </div>
 
           </div>
-  </div>
+  </div> -->
 <!-- This contains the hidden content for inline calls -->
 <div style='display:none'>
       <div id='inline_content' style='padding:10px; background:#fff;'>
